tests/snapshots/json_snapshots__run.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "run",
  "data": {
    "args": [],
    "child": {
      "code": 0,
      "signal": null
    },
    "displaced": null,
    "log": "<log>",
    "steps": [
      {
        "child": {
          "code": 0,
          "signal": null
        },
        "duration_ms": "<duration_ms>",
        "id": "hello",
        "scope": ".",
        "status": "ok"
      }
    ],
    "target": "repo",
    "task": "hello"
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
