tests/snapshots/json_snapshots__shell-init.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "shell-init",
  "data": {
    "script": "wtcd() { local p; p=\"$(command wt path -- \"$@\")\" || return $?; builtin cd -- \"$p\"; }\nwtsh() { eval \"$(command wt env --sh -- \"$@\")\"; }\nif [ -n \"$WT_PATH_PREFIX\" ] && [ \"${PATH#\"$WT_PATH_PREFIX:\"}\" = \"$PATH\" ]; then PATH=\"$WT_PATH_PREFIX:$PATH\"; export PATH; echo \"wt: PATH_NOT_SHADOWED — re-prepended $WT_PATH_PREFIX\" >&2; fi",
    "shell": "zsh"
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
