tests/snapshots/json_snapshots__status.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "status",
  "data": {
    "agent": null,
    "behind_default": 0,
    "branch": "main",
    "build": null,
    "build_kb": null,
    "canonical": true,
    "config_errors": [],
    "detached_sha": null,
    "dirty": {
      "modified": 0,
      "untracked": 0
    },
    "disk_kb": null,
    "geometry": {
      "base": 20000,
      "port_base": 20000,
      "stride": 16
    },
    "label": "repo",
    "meta": {},
    "name": "canonical",
    "path": "$ROOT/repos/repo",
    "phase": "ready",
    "ports": [
      {
        "bound": false,
        "name": "http",
        "port": 20000
      }
    ],
    "resources": [
      {
        "external": false,
        "has_instance": false,
        "holder": null,
        "last_error": null,
        "last_probe": null,
        "name": "repo_canonical_87657c73_service",
        "reason": null,
        "scope": ".",
        "state": "declared",
        "task": "service",
        "tied_to": "tree",
        "undeclared": false
      }
    ],
    "session": "no",
    "session_name": "repo",
    "slot": 0,
    "sync": {
      "at": null,
      "changed": [],
      "drift": [],
      "state": "never"
    },
    "target": "repo",
    "tasks": [
      {
        "cwd": ".",
        "description": null,
        "id": "build",
        "lock": null,
        "needs": [],
        "origin": "repo",
        "resource": false,
        "scope": ".",
        "tied_to": null
      },
      {
        "cwd": ".",
        "description": null,
        "id": "fmt",
        "lock": null,
        "needs": [],
        "origin": "repo",
        "resource": false,
        "scope": ".",
        "tied_to": null
      },
      {
        "cwd": ".",
        "description": null,
        "id": "hello",
        "lock": null,
        "needs": [],
        "origin": "repo",
        "resource": false,
        "scope": ".",
        "tied_to": null
      },
      {
        "cwd": ".",
        "description": null,
        "id": "lint",
        "lock": null,
        "needs": [],
        "origin": "repo",
        "resource": false,
        "scope": ".",
        "tied_to": null
      },
      {
        "cwd": ".",
        "description": null,
        "id": "service",
        "lock": null,
        "needs": [],
        "origin": "repo",
        "resource": true,
        "scope": ".",
        "tied_to": "tree"
      },
      {
        "cwd": ".",
        "description": null,
        "id": "sync",
        "lock": null,
        "needs": [],
        "origin": "repo",
        "resource": false,
        "scope": ".",
        "tied_to": null
      },
      {
        "cwd": ".",
        "description": null,
        "id": "test",
        "lock": null,
        "needs": [],
        "origin": "repo",
        "resource": false,
        "scope": ".",
        "tied_to": null
      },
      {
        "cwd": ".",
        "description": null,
        "id": "verify",
        "lock": null,
        "needs": [],
        "origin": "repo",
        "resource": false,
        "scope": ".",
        "tied_to": null
      }
    ],
    "tree_id": "<tree_id>",
    "upstream": {
      "ahead": 0,
      "behind": 0
    },
    "verify": null
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
