tests/snapshots/json_snapshots__which.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "which",
  "data": {
    "cmd": "git",
    "in_bin": false,
    "path": "/usr/bin/git",
    "target": "repo"
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
